--- a/scss/_frame.scss
+++ b/scss/_frame.scss
@@ -3,95 +3,14 @@
 	height: 100%;
 }
 
-#videoFrame {
+#topFrameWrapper {
 	width: 100%;
-	height: 100%;
+	height: 70%;
 
-	position: relative;
-
-	background-color: $gray-dark;
-
-	transition: all 0.5s;
-
-	// &.open {
-		padding-left: $side-frame-width;
-		padding-bottom: $bottom-frame-height;
-	// }
 }
 
-#sideFrame {
-	width: $side-frame-width;
+#bottomFrameWrapper {
+	width: 100%;
+	height: 30%;
 
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	// left: -$side-frame-width;
-
-	transition: all 0.5s;
-
-	// &.open {
-		left: 0;
-	// }
-
-	& > div {
-		background-color: $gray;
-	}
-
-	.headed-list {
-		display: table;
-		width: 100%;
-		height: 100%;
-
-		header {
-			display: table-row;
-			height: 0;
-
-			background-color: $blue;
-			color: $white;
-
-			h1 {
-				text-align: center;
-				font-size: $font-size-base * 2;
-				padding: 15px;
-			}
-
-			a {
-				display: block;
-				font-size: $font-size-base * 1.2;
-				padding: 10px;
-				text-decoration: none;
-				color: $white;
-			}
-		}
-
-		.list-wrapper {
-			display: table-row;
-
-			.list {
-				width: 100%;
-				height: 100%;
-				overflow-y: auto;
-			}
-		}
-	}
-}
-
-#bottomFrame {
-	height: $bottom-frame-height;
-
-	position: absolute;
-	// bottom: -$bottom-frame-height;
-	// left: $side-frame-width;
-	left: 0;
-	right: 0;
-
-	padding-left: $side-frame-width;
-
-	transition: all 0.5s;
-
-	background-color: $gray-dark;
-
-	// &.open {
-		bottom: 0;
-	// }
 }
