Initialized dummy variables in ProjectTimelineCtrl.

--- a/public/partials/project-timeline.html
+++ b/public/partials/project-timeline.html
@@ -1,4 +1,7 @@
 <div id="topFrameWrapper" ui-view></div>
 <div id="bottomFrameWrapper">
-	<h1>This is where the timeline goes.</h1>
+<div ng-controller="ProjectTimelineCtrl">
+	<h1>{{projectName}}</h1>
+
+</div>
 </div>
