--- a/public/partials/project-timeline.html
+++ b/public/partials/project-timeline.html
@@ -1,7 +1,8 @@
 <div id="topFrameWrapper" ui-view></div>
 <div id="bottomFrameWrapper">
 <div ng-controller="ProjectTimelineCtrl">
-	<h1>{{projectTitle}}</h1>
+	<h1>{{projectName}}</h1>
+
 <div id="timeline">
 		<hr id= "the-line" width="100%" />
 
