--- a/public/css/fancy-timeline.css
+++ b/public/css/fancy-timeline.css
@@ -8,8 +8,6 @@
     z-index: 0;
 }
 .timeline{
-    background-color: whitesmoke;
-    background-image: url('images/timeline-bg.jpg');
     background-size: cover;
     position: absolute;
     overflow: hidden;
@@ -29,14 +27,14 @@
     height: 300px;
     z-index: 0;
 }
+
+
 #timeline-dates-line{
     width: 100%;
     height: 3px;
     top: 10px;
     background-color: #666;
     position: relative;
-    opacity: 0.9;
-    box-shadow: 0px -2px 5px #333;
     z-index: 0;
 }
 
@@ -46,8 +44,7 @@
 .timeline-item{
     float: left;
     margin-left: 20px;
-    border: 1px solid #666;
-    box-shadow: 1px 4px 5px #333;
+    border: 1px solid grey;
     border-radius: 15px;
 }
 .timeline-item-content{
@@ -65,16 +62,15 @@
 
 /* item default */
 .item-default{
-    height: 250px;
-    width: 320px;
-    background-color: beige;
+    height: 120px;
+    width: 240px;
     font-family: sans-serif;
     font-size: 85%;
     opacity: 0.9;
 }
 .item-default.active {
-    width: 350px !important;
-    height: 290px !important;
+    width: 280px !important;
+    height: 160px !important;
 }
 
 .item-default .title{
