--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -1,17 +1,32 @@
 
 .milestone {
 
-	border-radius: 10px;
-	border: 1px solid grey;
-	padding: 5px;
-	margin: 15px;
-	display: inline-block;
-	width: 120px;
-	height: 80px;
-	text-align: center;
-	white-space: pre-line;
-	z-index: 1;
+	float: left;
+    margin-left: 20px;
+    border: 1px solid grey;
+    border-radius: 15px;
 
+    height: 120px;
+    width: 240px;
+    font-family: sans-serif;
+    font-size: 85%;
+    opacity: 0.9;
+
+}
+
+.milestone-content {
+	width: 90%;
+    height: 90%;
+    margin: auto;
+    margin-top: 8px;
+}
+
+
+.milestone-title {
+	display: block;
+    font-weight: bold;
+    font-size: 16px;
+    font: Arial;
 }
 
 #timeline {
@@ -20,22 +35,26 @@
 	overflow-x: scroll;
 	vertical-align: center;
 	white-space: nowrap;
-	
+
+}
+
+#timeline-display {
+	position: relative;
+    left: 0px;
+    width: 5000px;
+    display: table;
+    margin-top: 100px;
+    height: 300px;
+    z-index: 0;
 }
 
 
-
-hr {
-    border: 0;
-    height: 2px;
-    z-index: -1;
-    overflow-x: scroll;
-
-    background: #333;
-    background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc); 
-    background-image:    -moz-linear-gradient(left, #ccc, #333, #ccc); 
-    background-image:     -ms-linear-gradient(left, #ccc, #333, #ccc); 
-    background-image:      -o-linear-gradient(left, #ccc, #333, #ccc); 
-
-    margin: 50px;
+#the-line{
+    width: 100%;
+    height: 3px;
+    top: 5px;
+    background-color: #666;
+    position: relative;
+    z-index: 0;
 }
+
