--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -10,7 +10,8 @@
     width: 240px;
     font-family: sans-serif;
     font-size: 85%;
-    opacity: 0.9;
+
+    z-index: 9999;
 
 }
 
@@ -55,6 +56,22 @@
     top: 5px;
     background-color: #666;
     position: relative;
-    z-index: 0;
+    z-index: -1;
 }
 
+
+/* User Status Colors */
+.yellow {
+	color: #FFFF00;
+}
+.green {
+	color: #009933;
+}
+
+.red {
+	color: #980000;
+}
+
+.blue {
+	color: #0099FF;
+}
