--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2472,12 +2472,24 @@ a {
 @media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\000036}}
 #topFrameWrapper {
   width: 100%;
+  height: 0;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
+  background-color: red;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000312}}
+#topFrameWrapper.expanded {
   height: 70%;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000312}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000319}}
 #bottomFrameWrapper {
   width: 100%;
+  height: 100%;
+  background-color: green;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000325}}
+#bottomFrameWrapper.expanded {
   height: 30%;
 }
 
