--- a/public/partials/milestone.html
+++ b/public/partials/milestone.html
@@ -1,1 +1,123 @@
-<h1>This is where the milestone info goes.</h1>
+<div id="milestone">
+     <div id="milestoneTitleContainer">
+         <h1>{{ milestone.title }}</h1>
+     </div>
+     <div id="info">
+         <div id="details">
+             <ul class="nav nav-tabs" id="myTab">
+                <li><a href="#desc" data-toggle="tab">Description</a></li>
+                <li><a href="#pinned" data-toggle="tab">Pinned Posts</a></li>
+                <li  class="active"><a href="#resources" data-toggle="tab">Resources</a></li>
+            </ul>
+             <div class="tab-content">
+                <div class="tab-pane active" id="desc">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                        dolor, quis ullamcorper ligula sodales.
+                    </p>
+                </div><!--/tab-pane-->
+                <div class="tab-pane" id="pinned">
+                    <ul class="chat">
+                        <li class="left clearfix">
+                            <i class="ra-icon-pushpin pull-left"></i>
+                            <div class="chat-body clearfix">
+                                <div class="header">
+                                    <strong class="primary-font">Jack Sparrow</strong> <small class="pull-right text-muted">
+                                        <span class="glyphicon glyphicon-time"></span>12 mins ago</small>
+                                </div>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                                    dolor, quis ullamcorper ligula sodales.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="tab-pane" id="resources">
+                    <ul>
+                        <li>
+                            <a href="http://www.stanford.edu/class/cs110/handouts/09-Assignment-6-http-proxy.pdf" target="_blank">Assignment 6: HTTP Web Proxy and Cache</a>
+                        </li>
+                        <li>
+                            <a href="http://www.stanford.edu/class/cs110/lectures/23-principles-of-system-design.html#(1)" target="_blank">Slides: Principles of System Design</a>
+                        </li>
+                    </ul>
+                    <span class="input-group-btn">
+                        <button class="btn btn-warning btn-sm" id="btn-chat">
+                            Upload</button>
+                    </span>
+                </div><!--/tab-pane-->
+            </div>
+         </div>
+     </div>
+     <div id="chat">
+        <div class="panel panel-primary">
+            <div class="panel-heading">Chat</div>
+            <div class="panel-body">
+                <ul class="chat">
+                    <li class="left clearfix">
+                        <i class="ra-icon-pushpin pull-left"></i>
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">Jack Sparrow</strong> <small class="pull-right text-muted">
+                                    <span class="glyphicon glyphicon-time"></span>12 mins ago</small>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                                dolor, quis ullamcorper ligula sodales.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="right clearfix">                                
+                        <i class="ra-icon-pushpin pull-right"></i>
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <small class=" text-muted"><span class="glyphicon glyphicon-time"></span>13 mins ago</small>
+                                <strong class="pull-right primary-font">Bhaumik Patel</strong>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                                dolor, quis ullamcorper ligula sodales.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="left clearfix">
+                        <i class="ra-icon-pushpin pull-left"></i>
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">Jack Sparrow</strong> <small class="pull-right text-muted">
+                                    <span class="glyphicon glyphicon-time"></span>14 mins ago</small>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                                dolor, quis ullamcorper ligula sodales.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="right clearfix">
+                        <i class="ra-icon-pushpin pull-right"></i>
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <small class=" text-muted"><span class="glyphicon glyphicon-time"></span>15 mins ago</small>
+                                <strong class="pull-right primary-font">Bhaumik Patel</strong>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
+                                dolor, quis ullamcorper ligula sodales.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="panel-footer">
+                <div class="input-group">
+                    <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-warning btn-sm" id="btn-chat">
+                            Send</button>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
