--- a/scss/_frame.scss
+++ b/scss/_frame.scss
@@ -7,24 +7,27 @@
 	width: 100%;
 	height: 0;
 
+	position: relative;
+
+	background-color: $clouds;
+
 	transition: all 0.25s;
 
 	&.expanded {
 		height: 70%;
 	}
-
-	background-color: red;
 }
 
 #bottomFrameWrapper {
 	width: 100%;
 	height: 100%;
 
-	// transition: all 0.25s;
+	position: relative;
+
+	background-color: $clouds;
 
 	&.expanded {
 		height: 30%;
+		background-color: $asbestos;
 	}
-
-	background-color: green;
 }
