more or less working prototype 2

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,5 +1,7 @@
-<div id="loginModalOverlay">
+<!-- <div id="loginModalOverlay">
 	<div class="modal">
 		<button class="google-button" ng-click="onGoogleClick()"></button>
 	</div>
-</div>
+</div> -->
+
+<button class="google-button" ng-click="onGoogleClick()"></button>
