--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -21,7 +21,7 @@ $wet-asphalt: #34495e;
 $midnight-blue: #2c3e50;
 
 $black: $midnight-blue;
-$white: $clouds;
+$white: #fefefe;
 $gray: #A2A2A2;
 $gray-dark: #5D5D5D;
 $blue: #11609F;
@@ -29,6 +29,7 @@ $blue: #11609F;
 /* Site measurements */
 $font-size-base: 22px;
 
+$header-height: 50px;
 $control-bar-height: 60px;
 $bottom-frame-height: 300px;
 $side-frame-width: 300px;
