--- a/public/partials/milestone.html
+++ b/public/partials/milestone.html
@@ -1,4 +1,50 @@
 <div id="milestone">
+    <div class="details-frame">
+        <div class="details-content fill-space dz-table">
+            <div class="table-row-0">
+                <h1 class="milestone-title">{{ milestone.title }}</h1>
+            </div>
+            <div class="table-row">
+                <dz-tabs>
+                    <dz-tab-pane title="Summary">
+                        <p>{{ milestone.description }}</p>
+                    </dz-tab-pane>
+                    <dz-tab-pane title="Pinned Posts">
+                        <ul>
+                            <li ng-repeat="(id, post) in milestone.pinned_posts">
+                                <h1><em>{{ post.user }}</em></h1>
+                                <p>{{ post.msg }}</p>
+                            </li>
+                        </ul>
+                    </dz-tab-pane>
+                </dz-tabs>
+            </div>
+        </div>
+    </div>
+
+    <div class="chat-frame">
+        <div class="chat-box">
+            <div class="chat-stream">
+                <div class="chat" ng-repeat="(id, chat) in milestone.chat_stream">
+                    <h1><em>{{ chat.user }}</em></h1>
+                    <p>{{ chat.msg }}</p>
+                    <button ng-click="pinPost(chat)"><i class="ra-icon-pushpin"></i></button>
+                </div>
+            </div>
+
+            <div class="chat-input">
+                <div class="input-wrapper">
+                    <input type="text" ng-model="message" ng-enter="sendChat()" />
+                </div>
+                <button ng-click="sendChat()">Send</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- <div id="milestone">
      <div id="milestoneTitleContainer">
          <h1>{{ milestone.title }}</h1>
      </div>
@@ -15,7 +61,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
                         dolor, quis ullamcorper ligula sodales.
                     </p>
-                </div><!--/tab-pane-->
+                </div>
                 <div class="tab-pane" id="pinned">
                     <ul class="chat">
                         <li class="left clearfix">
@@ -46,7 +92,7 @@
                         <button class="btn btn-warning btn-sm" id="btn-chat">
                             Upload</button>
                     </span>
-                </div><!--/tab-pane-->
+                </div>
             </div>
          </div>
      </div>
@@ -120,4 +166,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
