--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -24,23 +24,66 @@
 		padding: 15px;
 		background-color: $white;
 
-		.google-button {
-			width: 197px;
-			height: 42px;
-			padding: 0;
-
-			background-color: transparent;
-			background-image: url("/img/Red-signin_Long_base_32dp.png");
-
-			&:hover {
-				background-color: transparent;
-				background-image: url("/img/Red-signin_Long_hover_32dp.png");
-			}
-
-			&:active {
-				background-color: transparent;
-				background-image: url("/img/Red-signin_Long_press_32dp.png");
-			}
-		}
+		
 	}
+}
+
+.google-button {
+	width: 197px;
+	height: 42px;
+	padding: 0;
+
+	background-color: transparent;
+	background-image: url("/img/Red-signin_Long_base_32dp.png");
+
+	&:hover {
+		background-color: transparent;
+		background-image: url("/img/Red-signin_Long_hover_32dp.png");
+	}
+
+	&:active {
+		background-color: transparent;
+		background-image: url("/img/Red-signin_Long_press_32dp.png");
+	}
+}
+
+.login-box {
+	width: 450px;
+	height: 100%;
+
+	float: right;
+
+	.input-wrapper {
+        width: 100%;
+        padding-right: 100px;
+
+        input {
+        	height: 100%;
+            border-radius: 0;
+        }
+    }
+
+    button {
+        width: 100px;
+        height: 100%;
+
+        position: absolute;
+        top: 0;
+        right: 0;
+
+        border-radius: 0;
+
+        color: $white;
+        background-color: $emerald;
+    }
+}
+
+.account-box {
+	width: 100%;
+	height: 100%;
+
+	color: $white;
+	padding: 8px;
+
+	text-align: right;
 }
