--- a/scss/_milestone.scss
+++ b/scss/_milestone.scss
@@ -1,3 +1,182 @@
+#milestone {
+    width: 100%;
+    height: 100%;
+
+    .details-frame {
+        width: 50%;
+        height: 100%;
+
+        float: left;
+        padding: 20px;
+        padding-right: 10px;
+
+        .details-content {
+            // background-color: $silver;
+        }
+
+        .milestone-title {
+            padding: 12px;
+            font-size: $font-size-base * 1.6;
+            // color: $white;
+        }
+
+        dz-tabs {
+            display: block;
+            width: 100%;
+            height: 100%;
+
+            .tabs-wrapper {
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+
+                .tabs-box {
+                    width: 100%;
+
+                    .tab {
+                        display: inline-block;
+                        color: $black;
+
+                        text-align: center;
+
+                        a {
+                            display: block;
+
+                            padding: 8px;
+
+                            text-decoration: none;
+                            color: $black;
+                        }
+
+                        &.active {
+                            background-color: $white;
+                            color: $black;
+                            a { color: $black; }
+                        }
+                    }
+                }
+
+                .tab-content {
+                    width: 100%;
+                    height: 100%;
+
+                    background-color: $white;
+
+                    .tab-pane {
+                        width: 100%;
+                        height: 100%;
+
+                        padding: 12px;
+                    }
+                }
+            }
+        }
+    }
+
+    .chat-frame {
+        width: 50%;
+        height: 100%;
+
+        float: left;
+
+        padding: 20px;
+        padding-left: 10px;
+
+        .chat-box {
+            width: 100%;
+            height: 100%;
+
+            position: relative;
+
+            background-color: $silver;
+
+            .chat-stream {
+                width: 100%;
+                height: 100%;
+
+                padding: 8px;
+                padding-bottom: 108px;
+
+                overflow-y: auto;
+                overflow-x: hidden;
+
+                .chat {
+                    width: 100%;
+                    padding: 10px;
+                    padding-right: 42px;
+                    margin-bottom: 8px;
+                    position: relative;
+
+                    background-color: $white;
+
+                    h1 {
+                        color: $concrete;
+                        font-size: $font-size-base * 0.6;
+                        margin-bottom: 6px;
+                    }
+
+                    p {
+
+                    }
+
+                    button {
+                        min-width: 0px;
+                        width: 32px;
+                        height: 100%;
+
+                        padding: 0px;
+                        border-radius: 0px;
+
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        bottom: 0;
+
+                        &:hover {
+                            background-color: $clouds;
+                        }
+                    }
+                }
+            }
+
+            .chat-input {
+                height: 46px;
+
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+
+                .input-wrapper {
+                    width: 100%;
+                    padding-right: 100px;
+
+                    input {
+                        border-radius: 0;
+                    }
+                }
+
+                button {
+                    width: 100px;
+                    height: 46px;
+
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+
+                    border-radius: 0;
+
+                    color: $white;
+                    background-color: $emerald;
+                }
+            }
+        }
+    }
+}
+
+
+
+
 // #milestone {
 //     position: absolute;
 //     top: 0px;
