--- a/scss/_project_timeline.scss
+++ b/scss/_project_timeline.scss
@@ -46,8 +46,9 @@
 
             margin-right: 120px;
             padding: 10px;
+            border-radius: 8px;
 
-            background-color: $silver;
+            background-color: $peter-river;
 
             cursor: pointer;
 
@@ -76,7 +77,7 @@
 
                     border-radius: 50%;
 
-                    background-color: $silver;
+                    background-color: $peter-river;
                 }
             }
         }
