--- a/public/partials/milestone.html
+++ b/public/partials/milestone.html
@@ -17,6 +17,17 @@
                             </li>
                         </ul>
                     </dz-tab-pane>
+                    <dz-tab-pane title="User Progress">
+                        <div ng-show="authData.loggedIn">
+                            <select ng-model="userStatus" ng-options="value for value in statusNames"></select>
+                            <button ng-click="updateStatus()">Update</button>
+                        </div>
+                        <ul>
+                            <li ng-repeat="(name, user) in milestone.users">
+                                {{ name }} - <span ng-style="{color: user.status_color}">{{ user.status }}</span>
+                            </li>
+                        </ul>
+                    </dz-tab-pane>
                 </dz-tabs>
             </div>
         </div>
@@ -28,7 +39,7 @@
                 <div class="chat" ng-repeat="(id, chat) in milestone.chat_stream">
                     <h1><em>{{ chat.user }}</em></h1>
                     <p>{{ chat.msg }}</p>
-                    <button ng-click="pinPost(chat)"><i class="ra-icon-pushpin"></i></button>
+                    <button ng-click="pinPost(chat)" ng-disabled="chat.pinned"><i class="ra-icon-pushpin"></i></button>
                 </div>
             </div>
 
