--- a/scss/_milestone.scss
+++ b/scss/_milestone.scss
@@ -103,7 +103,7 @@
                 .chat {
                     width: 100%;
                     padding: 10px;
-                    padding-right: 42px;
+                    // padding-right: 42px;
                     margin-bottom: 8px;
                     position: relative;
 
