--- a/scss/_milestone.scss
+++ b/scss/_milestone.scss
@@ -116,7 +116,9 @@
                     }
 
                     p {
-
+                        a {
+                            color: $peter-river;
+                        }
                     }
 
                     button {
